force-app/main/default/objects/adapps__OptimizerPlus_Filters__c/adapps__OptimizerPlus_Filters__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>OptimizerPlusFilters</label>
</CustomObject>