force-app/main/default/objects/adapps__OptimizerPlus_Filters__c/fields/adapps__FeatureType_USAGE__c.field-meta.xml
<CustomField>
    <fullName>adapps__FeatureType_USAGE__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>FeatureType_USAGE</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>