force-app/main/default/objects/adapps__OptimizerPlus_Filters__c/fields/adapps__Impact_HIGH_IMPACT__c.field-meta.xml
<CustomField>
    <fullName>adapps__Impact_HIGH_IMPACT__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Impact_HIGH_IMPACT</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>