force-app/main/default/objects/adapps__OptimizerPlus_Filters__c/fields/adapps__Impact_UNABLE_TO_ANALYZE__c.field-meta.xml
<CustomField>
    <fullName>adapps__Impact_UNABLE_TO_ANALYZE__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Impact_UNABLE_TO_ANALYZE</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>